# rag-data-ingestion-pipeline

./: .env.example  .gitignore  main.py  pyproject.toml  rag.ipynb  requirements.txt  text.md
