[project]
name = "vemb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.21.0",
    "pymongo>=4.16.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
]
